src/grammar/document/snapshots/yaml_parser__grammar__document__tests__prefix-68.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix, \"%TAG invalid\\n%YAML 1.2\\n# yaml\\n%FOO bar baz\\n---\")"
---
- token: directive
  stream: "%"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: directive_name
  stream: TAG
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 4
      line: 0
      column: 4
- token: separator
  stream: " "
  span:
    start:
      index: 4
      line: 0
      column: 4
    end:
      index: 5
      line: 0
      column: 5
- token: error
  stream: invalid
  span:
    start:
      index: 5
      line: 0
      column: 5
    end:
      index: 12
      line: 0
      column: 12
- severity: error
  message: "expected '!', but found 'i'"
  span:
    start:
      index: 5
      line: 0
      column: 5
    end:
      index: 6
      line: 0
      column: 6
  stream: i
- token: break
  stream: "\n"
  span:
    start:
      index: 12
      line: 0
      column: 12
    end:
      index: 13
      line: 1
      column: 0
- token: directive
  stream: "%"
  span:
    start:
      index: 13
      line: 1
      column: 0
    end:
      index: 14
      line: 1
      column: 1
- token: directive_name
  stream: YAML
  span:
    start:
      index: 14
      line: 1
      column: 1
    end:
      index: 18
      line: 1
      column: 5
- token: separator
  stream: " "
  span:
    start:
      index: 18
      line: 1
      column: 5
    end:
      index: 19
      line: 1
      column: 6
- token: yaml_version
  stream: "1.2"
  span:
    start:
      index: 19
      line: 1
      column: 6
    end:
      index: 22
      line: 1
      column: 9
- token: break
  stream: "\n"
  span:
    start:
      index: 22
      line: 1
      column: 9
    end:
      index: 23
      line: 2
      column: 0
- token: comment
  stream: "# yaml"
  span:
    start:
      index: 23
      line: 2
      column: 0
    end:
      index: 29
      line: 2
      column: 6
- token: break
  stream: "\n"
  span:
    start:
      index: 29
      line: 2
      column: 6
    end:
      index: 30
      line: 3
      column: 0
- token: directive
  stream: "%"
  span:
    start:
      index: 30
      line: 3
      column: 0
    end:
      index: 31
      line: 3
      column: 1
- token: directive_name
  stream: FOO
  span:
    start:
      index: 31
      line: 3
      column: 1
    end:
      index: 34
      line: 3
      column: 4
- severity: warning
  message: "unknown directive 'FOO'"
  span:
    start:
      index: 31
      line: 3
      column: 1
    end:
      index: 34
      line: 3
      column: 4
  stream: FOO
- token: separator
  stream: " "
  span:
    start:
      index: 34
      line: 3
      column: 4
    end:
      index: 35
      line: 3
      column: 5
- token: directive_parameter
  stream: bar
  span:
    start:
      index: 35
      line: 3
      column: 5
    end:
      index: 38
      line: 3
      column: 8
- token: separator
  stream: " "
  span:
    start:
      index: 38
      line: 3
      column: 8
    end:
      index: 39
      line: 3
      column: 9
- token: directive_parameter
  stream: baz
  span:
    start:
      index: 39
      line: 3
      column: 9
    end:
      index: 42
      line: 3
      column: 12
- token: break
  stream: "\n"
  span:
    start:
      index: 42
      line: 3
      column: 12
    end:
      index: 43
      line: 4
      column: 0
- token: directives_end
  stream: "---"
  span:
    start:
      index: 43
      line: 4
      column: 0
    end:
      index: 46
      line: 4
      column: 3
- value:
    version: "1.2"
    tags: {}

