src/grammar/document/snapshots/yaml_parser__grammar__document__tests__prefix-69.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix,\n    \"%FOO bar invalid\\0 \\n%YAML 1.2\\n# yaml\\n%TAG !yaml! tag:yaml.org,2002:\\n---\")"
---
- token: directive
  stream: "%"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: directive_name
  stream: FOO
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 4
      line: 0
      column: 4
- severity: warning
  message: "unknown directive 'FOO'"
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 4
      line: 0
      column: 4
  stream: FOO
- token: separator
  stream: " "
  span:
    start:
      index: 4
      line: 0
      column: 4
    end:
      index: 5
      line: 0
      column: 5
- token: directive_parameter
  stream: bar
  span:
    start:
      index: 5
      line: 0
      column: 5
    end:
      index: 8
      line: 0
      column: 8
- token: separator
  stream: " "
  span:
    start:
      index: 8
      line: 0
      column: 8
    end:
      index: 9
      line: 0
      column: 9
- token: directive_parameter
  stream: invalid
  span:
    start:
      index: 9
      line: 0
      column: 9
    end:
      index: 16
      line: 0
      column: 16
- severity: error
  message: "expected a line break, but found non-printable character '\\0'"
  span:
    start:
      index: 16
      line: 0
      column: 16
    end:
      index: 17
      line: 0
      column: 17
  stream: "\u0000"
- remainder: "\u0000 \n%YAML 1.2\n# yaml\n%TAG !yaml! tag:yaml.org,2002:\n---"
  span:
    start:
      index: 16
      line: 0
      column: 16
    end:
      index: 70
      line: 4
      column: 3

