src/grammar/document/snapshots/yaml_parser__grammar__document__tests__prefix-70.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix, \"foo\")"
---
- value:
    version: ~
    tags: {}
- remainder: foo
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 3
      line: 0
      column: 3

