src/grammar/document/snapshots/yaml_parser__grammar__document__tests__prefix-75.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix, \"\\n\\tfoo\")"
---
- token: break
  stream: "\n"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 1
      column: 0
- token: indent
  stream: ""
  span:
    start:
      index: 1
      line: 1
      column: 0
    end:
      index: 1
      line: 1
      column: 0
- token: indent
  stream: ""
  span:
    start:
      index: 1
      line: 1
      column: 0
    end:
      index: 1
      line: 1
      column: 0
- value:
    version: ~
    tags: {}
- remainder: "\tfoo"
  span:
    start:
      index: 1
      line: 1
      column: 0
    end:
      index: 5
      line: 1
      column: 4

